changes in base test