@@ -8,6 +8,7 @@ import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 
@@ -17,8 +18,24 @@ public class BaseTest {
 
     @BeforeMethod
     public void setUp() throws MalformedURLException {
-        File app = new File(System.getProperty("user.dir") + "/app-debug.apk");
-        
+        System.out.println("DEBUG: setUp() called");
+        String userDir = System.getProperty("user.dir");
+        System.out.println("DEBUG: user.dir = " + userDir);
+
+        File app = new File(userDir, "app-debug.apk");
+        System.out.println("DEBUG: App path = " + app.getAbsolutePath());
+
+        if (!app.exists()) {
+            System.out.println("ERROR: APK file not found at " + app.getAbsolutePath());
+            // Try fallback - check current directory directly
+            app = new File("app-debug.apk");
+            System.out.println("DEBUG: Fallback App path = " + app.getAbsolutePath());
+        }
+
+        if (!app.exists()) {
+            throw new RuntimeException("APK file missing! Please ensure app-debug.apk is in the project root.");
+        }
+
         UiAutomator2Options options = new UiAutomator2Options()
                 .setPlatformName("Android")
                 .setAutomationName("UiAutomator2")
@@ -26,10 +43,24 @@ public class BaseTest {
                 .setApp(app.getAbsolutePath())
                 .setAppPackage("com.example.welcomenote")
                 .setAppActivity(".MainActivity")
-                .setNoReset(false) // Changed to false to force install/reinstall
+                .setNoReset(false)
                 .setNewCommandTimeout(Duration.ofSeconds(300));
 
-        driver = new AndroidDriver(new URL("http://127.0.0.1:4723"), options);
+        try {
+            driver = new AndroidDriver(
+                    URI.create("http://127.0.0.1:4723").toURL(),
+                    options
+            );
+            System.out.println("DEBUG: Driver initialized successfully");
+        } catch (MalformedURLException e) {
+            System.err.println("FATAL ERROR: Invalid Appium server URL!");
+            throw new RuntimeException("Invalid Appium URL", e);
+        } catch (Exception e) {
+            System.err.println("ERROR: Failed to initialize driver: " + e.getMessage());
+            e.printStackTrace();
+            throw e; // rethrow because test cannot continue without driver
+        }
+
     }
 
     @AfterMethod
